--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,10 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+      - name: Conf .npmrc
+        run: |
+          echo "legacy-peer-deps=true" > .npmrc
+
       - name: Install dependencies
         run: |
           npm ci --legacy-peer-deps
