--- a/packages/base/ajax-provider/package.json
+++ b/packages/base/ajax-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote-web-components/ajax-provider",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "Webcomponent ajax-provider following open-wc recommendations",
   "keywords": [
     "lit",
@@ -149,7 +149,7 @@
   },
   "devDependencies": {
     "@alenaksu/json-viewer": "^2.0.1",
-    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.4.4"
+    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.5.0"
   },
   "publishConfig": {
     "access": "public"
