--- a/packages/mixins/blockquote-mixin-slot-content/package.json
+++ b/packages/mixins/blockquote-mixin-slot-content/package.json
@@ -130,6 +130,7 @@
       ],
       "import/no-unresolved": "off",
       "import/prefer-default-export": "off",
+      "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
     }
   },
@@ -145,7 +146,7 @@
   },
   "dependencies": {
     "@open-wc/dedupe-mixin": "^1.4.0",
-    "lit": "^2.8.0"
+    "lit": "^3.1.0"
   },
   "devDependencies": {
     "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.5.0",
