--- a/packages/directives/blockquote-directive-svg-to-data-image/package.json
+++ b/packages/directives/blockquote-directive-svg-to-data-image/package.json
@@ -131,6 +131,7 @@
       ],
       "import/no-unresolved": "off",
       "import/prefer-default-export": "off",
+      "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
     }
   },
@@ -145,7 +146,7 @@
     }
   },
   "dependencies": {
-    "lit": "^2.8.0"
+    "lit": "^3.1.0"
   },
   "devDependencies": {
     "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.5.0",
