--- a/packages/controllers/blockquote-controller-rxjs/package.json
+++ b/packages/controllers/blockquote-controller-rxjs/package.json
@@ -128,6 +128,7 @@
       ],
       "import/no-unresolved": "off",
       "import/prefer-default-export": "off",
+      "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
     }
   },
@@ -142,7 +143,7 @@
     }
   },
   "dependencies": {
-    "lit": "^2.8.0",
+    "lit": "^3.1.0",
     "rxjs": "^8.0.0-alpha.12"
   },
   "devDependencies": {
