--- a/packages/base/blockquote-base-style-helpers/package.json
+++ b/packages/base/blockquote-base-style-helpers/package.json
@@ -134,6 +134,7 @@
       ],
       "import/no-unresolved": "off",
       "import/prefer-default-export": "off",
+      "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
     }
   },
@@ -153,7 +154,7 @@
   "devDependencies": {
     "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.5.0",
     "@blockquote-web-components/blockquote-base-embedded-webview": "^1.5.3",
-    "lit": "^2.8.0"
+    "lit": "^3.1.0"
   },
   "publishConfig": {
     "access": "public"
