--- a/packages/components/blockquote-tabs/package.json
+++ b/packages/components/blockquote-tabs/package.json
@@ -152,6 +152,7 @@
       ],
       "import/no-unresolved": "off",
       "import/prefer-default-export": "off",
+      "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
     }
   },
@@ -169,7 +170,7 @@
     "@blockquote-web-components/blockquote-mixin-slot-content": "^1.2.14",
     "@juggle/resize-observer": "^3.4.0",
     "@lit-labs/observers": "^2.0.0",
-    "lit": "^2.8.0"
+    "lit": "^3.1.0"
   },
   "devDependencies": {
     "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.5.0",
