--- a/packages/base/blockquote-base-embedded-webview/package.json
+++ b/packages/base/blockquote-base-embedded-webview/package.json
@@ -161,6 +161,7 @@
       ],
       "import/no-unresolved": "off",
       "import/prefer-default-export": "off",
+      "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
     }
   },
@@ -176,7 +177,7 @@
   },
   "dependencies": {
     "@blockquote/polymer": "^3.4.1",
-    "lit": "^2.8.0"
+    "lit": "^3.1.0"
   },
   "devDependencies": {
     "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.5.0",
