--- a/packages/base/ajax-provider/package.json
+++ b/packages/base/ajax-provider/package.json
@@ -129,6 +129,7 @@
       ],
       "import/no-unresolved": "off",
       "import/prefer-default-export": "off",
+      "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
     }
   },
@@ -144,12 +145,12 @@
   },
   "dependencies": {
     "@open-wc/dedupe-mixin": "^1.4.0",
-    "lit": "^2.8.0",
     "rxjs": "^8.0.0-alpha.12"
   },
   "devDependencies": {
     "@alenaksu/json-viewer": "^2.0.1",
-    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.5.0"
+    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.5.0",
+    "lit": "^3.1.0"
   },
   "publishConfig": {
     "access": "public"
