--- a/nx.json
+++ b/nx.json
@@ -1,32 +1,34 @@
 {
-  "tasksRunnerOptions": {
-    "default": {
-      "runner": "nx/tasks-runners/default",
-      "options": {
-        "cacheableOperations": [
-          "analyze",
-          "analyze:doc",
-          "lint:eslint",
-          "lint:prettier",
-          "lint:stylelint",
-          "format:eslint",
-          "format:prettier",
-          "format:stylelint",
-          "test"
-        ]
-      }
+  "targetDefaults": {
+    "analyze": {
+      "cache": true
+    },
+    "lint:eslint": {
+      "cache": true
+    },
+    "lint:prettier": {
+      "cache": true
+    },
+    "lint:stylelint": {
+      "cache": true
+    },
+    "format:eslint": {
+      "cache": true
+    },
+    "format:prettier": {
+      "cache": true
+    },
+    "format:stylelint": {
+      "cache": true
+    },
+    "test": {
+      "cache": true
     }
   },
-  "targetDefaults": {},
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "namedInputs": {
-    "default": [
-      "{projectRoot}/**/*",
-      "sharedGlobals"
-    ],
+    "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "sharedGlobals": [],
-    "production": [
-      "default"
-    ]
+    "production": ["default"]
   }
 }
