--- a/packages/controllers/blockquote-controller-xstate/package.json
+++ b/packages/controllers/blockquote-controller-xstate/package.json
@@ -133,7 +133,7 @@
   },
   "dependencies": {
     "lit": "^3.1.0",
-    "xstate": "^5.0.0-beta.45"
+    "xstate": "^5.2.1"
   },
   "devDependencies": {
     "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.7.0",
