feat(blockquote-base-meta): add globalThis

--- a/packages/base/blockquote-base-meta/package.json
+++ b/packages/base/blockquote-base-meta/package.json
@@ -80,6 +80,9 @@
     ]
   },
   "eslintConfig": {
+    "globals": {
+      "globalThis": "readonly"
+    },
     "parserOptions": {
       "ecmaVersion": "latest"
     },
