--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "site:prepare": "npm run clean:packages:dev && lerna run dev:vite",
     "site:copy": "rm -rf ./site/**/* && node scripts/move-dev-directory.js",
     "version": "npm run standard",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "lint-staged": {
     "**/*.{js,ts,html}, !site/**/*": [
@@ -108,27 +108,27 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/eslint-parser": "^7.23.3",
+    "@babel/core": "^7.23.9",
+    "@babel/eslint-parser": "^7.23.9",
     "@babel/eslint-plugin": "^7.23.5",
-    "@commitlint/cli": "^18.4.4",
-    "@commitlint/config-conventional": "^18.4.4",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@commitlint/config-lerna-scopes": "^18.4.4",
     "@open-wc/eslint-config": "^12.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.6",
     "karma": "^6.4.2",
     "lerna": "^8.0.2",
     "lint-staged": "^15.2.0",
     "postcss": "^8.4.33",
-    "prettier": "^3.2.2",
+    "prettier": "^3.2.4",
     "eslint-plugin-prettier": "^5.1.3",
     "rxjs": "^8.0.0-alpha.14",
     "sort-package-json": "^2.6.0",
     "standard-version": "^9.5.0",
-    "stylelint": "^16.1.0",
+    "stylelint": "^16.2.0",
     "stylelint-config-standard-scss": "^13.0.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
