fix(blockquote-base-style-helpers): check  array

--- a/packages/base/blockquote-base-style-helpers/package.json
+++ b/packages/base/blockquote-base-style-helpers/package.json
@@ -135,6 +135,9 @@
       "import/prefer-default-export": "off",
       "lit/no-classfield-shadowing": "off",
       "lit/no-native-attributes": "off"
+    },
+    "globals": {
+      "globalThis": "readonly"
     }
   },
   "stylelint": {
