--- a/packages/mixins/blockquote-mixin-slot-content/package.json
+++ b/packages/mixins/blockquote-mixin-slot-content/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "default": "./index.js"
+      "default": "./src/index.js"
     },
     "./package.json": {
       "default": "./package.json"
@@ -23,11 +23,11 @@
       "default": "./src/BlockquoteMixinSlotContent.js"
     },
     "./index.js": {
-      "default": "./index.js"
+      "default": "./src/index.js"
     }
   },
-  "main": "index.js",
-  "module": "index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "files": [
     "/define/",
     "/src/",
