--- a/packages/base/blockquote-base-embedded-webview/package.json
+++ b/packages/base/blockquote-base-embedded-webview/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "default": "./index.js"
+      "default": "./src/index.js"
     },
     "./package.json": {
       "default": "./package.json"
@@ -42,7 +42,7 @@
       "default": "./define/blockquote-base-embedded-webview.js"
     },
     "./index.js": {
-      "default": "./index.js"
+      "default": "./src/index.js"
     },
     "./src/styles/blockquote-base-embedded-webview-styles.css.js": {
       "default": "./src/styles/blockquote-base-embedded-webview-styles.css.js"
@@ -57,8 +57,8 @@
       "default": "./src/styles/blockquote-base-embedded-webview-size-styles.css.js"
     }
   },
-  "main": "index.js",
-  "module": "index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "files": [
     "/define/",
     "/src/",
