--- a/packages/base/ajax-provider/package.json
+++ b/packages/base/ajax-provider/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "default": "./index.js"
+      "default": "./src/index.js"
     },
     "./package.json": {
       "default": "./package.json"
@@ -24,11 +24,11 @@
       "default": "./define/ajax-provider.js"
     },
     "./index.js": {
-      "default": "./index.js"
+      "default": "./src/index.js"
     }
   },
-  "main": "index.js",
-  "module": "index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "files": [
     "/src/",
     "index.js"
