--- a/packages/controllers/blockquote-controller-context-meta/package.json
+++ b/packages/controllers/blockquote-controller-context-meta/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote-web-components/blockquote-controller-context-meta",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "Webcomponent blockquote-controller-context-meta following open-wc recommendations",
   "keywords": [
     "lit",
