feat(blockquote-dialog): add labelledbyVisible property

--- a/packages/components/blockquote-dialog/package.json
+++ b/packages/components/blockquote-dialog/package.json
@@ -103,7 +103,7 @@
           "SwitchCase": 1,
           "ignoredNodes": [
             "PropertyDefinition",
-            "TemplateLiteral > CallExpression"
+            "TemplateLiteral > *"
           ]
         }
       ],
