chore: use consistent prettier config for lit package

--- a/packages/foundations/blockquote-foundations-sass/package.json
+++ b/packages/foundations/blockquote-foundations-sass/package.json
@@ -16,12 +16,12 @@
     "*.scss"
   ],
   "prettier": {
-    "arrowParens": "avoid",
     "bracketSameLine": true,
+    "bracketSpacing": false,
     "htmlWhitespaceSensitivity": "ignore",
     "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "all",
+    "trailingComma": "es5",
     "overrides": [
       {
         "files": "*.{scss,css}",
