--- a/packages/controllers/blockquote-controller-context-meta/package.json
+++ b/packages/controllers/blockquote-controller-context-meta/package.json
@@ -66,12 +66,12 @@
     ]
   },
   "prettier": {
-    "arrowParens": "avoid",
     "bracketSameLine": true,
+    "bracketSpacing": false,
     "htmlWhitespaceSensitivity": "ignore",
     "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "all",
+    "trailingComma": "es5",
     "overrides": [
       {
         "files": "*.{scss,css}",
