--- a/packages/directives/blockquote-directive-ariaidref-slot/package.json
+++ b/packages/directives/blockquote-directive-ariaidref-slot/package.json
@@ -70,12 +70,12 @@
     ]
   },
   "prettier": {
-    "arrowParens": "avoid",
     "bracketSameLine": true,
+    "bracketSpacing": false,
     "htmlWhitespaceSensitivity": "ignore",
     "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "all",
+    "trailingComma": "es5",
     "overrides": [
       {
         "files": "*.{scss,css}",
