--- a/packages/foundations/blockquote-foundations-sass/package.json
+++ b/packages/foundations/blockquote-foundations-sass/package.json
@@ -33,16 +33,12 @@
     ]
   },
   "stylelint": {
-    "extends": [
-      "stylelint-config-prettier",
-      "stylelint-config-standard-scss"
-    ],
+    "extends": "stylelint-config-standard-scss",
     "rules": {
       "custom-property-pattern": null,
       "no-duplicate-selectors": null,
       "color-function-notation": null,
-      "alpha-value-notation": null,
-      "string-quotes": "double"
+      "alpha-value-notation": null
     }
   }
 }
