--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "description": "Monorepo - Blockquote Web Components",
   "homepage": "https://github.com/oscarmarina/blockquote-web-components",
-  "author": {
-    "name": "oscarmarina",
-    "url": "https://62d3439a0eebee66a69d4650--adorable-macaron-7c1b61.netlify.app"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oscarmarina/blockquote-web-components"
+  },
+  "author": {
+    "name": "oscarmarina",
+    "url": "https://62d3439a0eebee66a69d4650--adorable-macaron-7c1b61.netlify.app"
   },
   "type": "module",
   "workspaces": {
@@ -19,6 +19,7 @@
     ]
   },
   "scripts": {
+    "analyze": "lerna run analyze --stream --concurrency 1",
     "clean": "rm package-lock.json && lerna clean",
     "clean:packages": "lerna exec -- rm -rf ./node_modules && npm run clean:packages:dev",
     "clean:packages:dev": "lerna exec -- rm -rf ./dev && lerna exec -- rm -rf ./package-lock.json",
@@ -31,18 +32,17 @@
     "lint:eslint": "func() { eslint \"./packages/**/${1:-*}/**/\"; }; func",
     "lint:prettier": "func() { prettier --check --ignore-path .prettierignore \"./packages/**/${1:-*}/**/*.{js,ts,json,html}\"; }; func",
     "lint:stylelint": "func() { stylelint --allow-empty-input --ignore-path .prettierignore \"./packages/**/${1:-*}/**/*.{css,scss}\"; }; func",
+    "prepare": "husky",
     "push": "git push --follow-tags origin main",
-    "release": "npm run bootstrap && npm run test:pre-push && lerna version --no-push",
+    "release": " npm ci && npm run test:pre-push && lerna version --no-push",
+    "site": "npm run site:prepare && npm run site:copy",
+    "site:copy": "rm -rf ./site/**/* && node scripts/move-dev-directory.js",
+    "site:prepare": "npm run clean:packages:dev && lerna run dev:vite",
     "standard": "standard-version",
     "test": "lerna run test --stream --concurrency 1",
-    "analyze": "lerna run analyze --stream --concurrency 1",
     "test:pre-push": "npm run test -- --since",
     "test:scope": "func() { lerna run test --stream --concurrency 1 --scope @blockquote-web-components/${1}; }; func",
-    "site": "npm run site:prepare && npm run site:copy",
-    "site:prepare": "npm run clean:packages:dev && lerna run dev:vite",
-    "site:copy": "rm -rf ./site/**/* && node scripts/move-dev-directory.js",
-    "version": "npm run standard",
-    "prepare": "husky"
+    "version": "npm run standard"
   },
   "lint-staged": {
     "**/*.{js,ts,html}, !site/**/*": [
@@ -56,35 +56,38 @@
     ],
     "**/package.json": "npm run format:package -- *"
   },
+  "dependencies": {
+    "cheerio": "^1.0.0",
+    "recursive-copy": "^2.0.14"
+  },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/eslint-parser": "^7.24.7",
-    "@babel/eslint-plugin": "^7.24.7",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/config-lerna-scopes": "^19.0.0",
-    "@html-eslint/eslint-plugin": "^0.25.0",
-    "@html-eslint/parser": "^0.25.0",
+    "@babel/core": "^7.25.7",
+    "@babel/eslint-parser": "^7.25.7",
+    "@babel/eslint-plugin": "^7.25.7",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/config-lerna-scopes": "^19.5.0",
+    "@html-eslint/eslint-plugin": "^0.27.0",
+    "@html-eslint/parser": "^0.27.0",
     "@open-wc/eslint-config": "^12.0.3",
     "eslint": "^8.57.0",
-    "husky": "^9.0.11",
-    "karma": "^6.4.3",
-    "lerna": "^8.1.3",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "eslint-plugin-prettier": "^5.1.3",
-    "rxjs": "^8.0.0-alpha.14",
-    "sort-package-json": "^2.10.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "sort-package-json": "^2.10.1",
     "standard-version": "^9.5.0",
-    "stylelint": "^16.6.1",
+    "stylelint": "^16.9.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "^7.13.1"
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   },
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "recursive-copy": "^2.0.14"
+  "peerDependencies": {
+    "lerna": "^8.1.8"
+  },
+  "overrides": {
+    "lerna": "^8.1.8"
   }
 }
