--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
+    "lerna": "^8.1.8",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
@@ -82,10 +83,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.0"
-  },
-  "peerDependencies": {
-    "lerna": "^8.1.8"
+    "typescript-eslint": "^8.8.1"
   },
   "overrides": {
     "lerna": "^8.1.8"
