--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "clean": "rm package-lock.json && lerna clean",
     "clean:packages": "lerna exec -- rm -rf ./node_modules && npm run clean:packages:dev",
     "clean:packages:dev": "lerna exec -- rm -rf ./dev && lerna exec -- rm -rf ./package-lock.json",
-    "format": "func() { lerna run format:eslint $1 && lerna run format:prettier $1 && lerna run format:stylelint $1; }; func",
+    "format": "func() { lerna run format:eslint && lerna run format:prettier && lerna run format:stylelint; }; func",
     "format:eslint": "func() { eslint --fix \"./packages/**/${1:-*}/**/\"; }; func",
     "format:package": "func() { sort-package-json \"./packages/**/${1:-*}/**/package.json\"; }; func",
     "format:prettier": "func() { prettier --write --list-different --ignore-path .prettierignore \"./packages/**/${1:-*}/**/*.{js,ts,json,html}\"; }; func",
     "format:stylelint": "func() { stylelint --fix --allow-empty-input --ignore-path .prettierignore \"./packages/**/${1:-*}/**/*.{css,scss}\"; }; func",
-    "lint": "func() { lerna run lint:eslint $1 && lerna run lint:prettier $1 && lerna run lint:stylelint $1; }; func",
+    "lint": "func() { lerna run --stream lint:eslint && lerna run --stream lint:prettier && lerna run --stream lint:stylelint; }; func",
     "lint:eslint": "func() { eslint \"./packages/**/${1:-*}/**/\"; }; func",
     "lint:prettier": "func() { prettier --check --ignore-path .prettierignore \"./packages/**/${1:-*}/**/*.{js,ts,json,html}\"; }; func",
     "lint:stylelint": "func() { stylelint --allow-empty-input --ignore-path .prettierignore \"./packages/**/${1:-*}/**/*.{css,scss}\"; }; func",
