--- a/packages/directives/blockquote-directive-svg-to-data-image/package.json
+++ b/packages/directives/blockquote-directive-svg-to-data-image/package.json
@@ -20,7 +20,7 @@
     "./package.json": {
       "default": "./package.json"
     },
-    "./src/BlockquoteDirectiveSvgToDataImage.js": {
+    "./BlockquoteDirectiveSvgToDataImage.js": {
       "default": "./src/BlockquoteDirectiveSvgToDataImage.js"
     },
     "./index.js": {
@@ -30,10 +30,7 @@
   "main": "src/index.js",
   "module": "src/index.js",
   "files": [
-    "/define/",
-    "/src/",
-    "index.js",
-    "!/**/*.scss"
+    "/src/"
   ],
   "scripts": {
     "analyze": "cem analyze --litelement --globs \"{src,define}/**/*.{js,ts}\" \"index.js\"",
