--- a/packages/controllers/blockquote-controller-rxjs/package.json
+++ b/packages/controllers/blockquote-controller-rxjs/package.json
@@ -17,7 +17,7 @@
     "./package.json": {
       "default": "./package.json"
     },
-    "./src/BlockquoteControllerRxjs.js": {
+    "./BlockquoteControllerRxjs.js": {
       "default": "./src/BlockquoteControllerRxjs.js"
     },
     "./index.js": {
@@ -27,10 +27,7 @@
   "main": "src/index.js",
   "module": "src/index.js",
   "files": [
-    "/define/",
-    "/src/",
-    "index.js",
-    "!/**/*.scss"
+    "/src/"
   ],
   "scripts": {
     "analyze": "cem analyze --litelement --globs \"{src,define}/**/*.{js,ts}\" \"index.js\"",
