--- a/package.json
+++ b/package.json
@@ -61,31 +61,35 @@
     "recursive-copy": "^2.0.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.7",
-    "@babel/eslint-parser": "^7.25.7",
-    "@babel/eslint-plugin": "^7.25.7",
+    "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.25.9",
+    "@babel/eslint-plugin": "^7.25.9",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@commitlint/config-lerna-scopes": "^19.5.0",
     "@html-eslint/eslint-plugin": "^0.27.0",
     "@html-eslint/parser": "^0.27.0",
-    "@open-wc/eslint-config": "^12.0.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-lit": "^1.15.0",
+    "eslint-plugin-lit-a11y": "^4.1.4",
+    "eslint-plugin-wc": "^2.2.0",
+    "globals": "^15.12.0",
     "husky": "^9.1.6",
-    "lerna": "^8.1.8",
+    "lerna": "^8.1.9",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "sort-package-json": "^2.10.1",
     "standard-version": "^9.5.0",
-    "stylelint": "^16.9.0",
+    "stylelint": "^16.10.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "tslib": "^2.7.0",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.1"
+    "tslib": "^2.8.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   },
   "overrides": {
-    "lerna": "^8.1.8"
+    "lerna": "^8.1.9"
   }
 }
