--- a/packages/base/blockquote-base-embedded-webview/package.json
+++ b/packages/base/blockquote-base-embedded-webview/package.json
@@ -64,7 +64,7 @@
     "!/**/*.scss"
   ],
   "scripts": {
-    "analyze": "cem analyze --litelement --globs \"{src,define}/**/*.{js,ts}\" \"index.js\"",
+    "analyze": "cem analyze --litelement --globs \"src/**/*.{js,ts}\" \"index.js\"",
     "build": "echo \"This is not a TypeScript project, so no need to build.\"",
     "dev:vite": "vite build",
     "format": "npm run format:eslint && npm run format:prettier && npm run format:stylelint",
@@ -80,8 +80,8 @@
     "sass:watch": "sass-style-template",
     "sort:package": "npx sort-package-json",
     "start": "concurrently -k -r \"npm:sass:watch\" \"npm:vite\"",
-    "test": "wtr --coverage",
-    "test:watch": "wtr --watch",
+    "test": "vitest --run --browser.headless",
+    "test:watch": "vitest",
     "vite": "vite"
   },
   "lint-staged": {
