--- a/packages/base/blockquote-base-style-helpers/package.json
+++ b/packages/base/blockquote-base-style-helpers/package.json
@@ -53,8 +53,8 @@
     "sass:watch": "sass-style-template",
     "sort:package": "npx sort-package-json",
     "start": "concurrently -k -r \"npm:sass:watch\" \"npm:vite\"",
-    "test": "wtr --coverage",
-    "test:watch": "wtr --watch",
+    "test": "vitest --run --browser.headless",
+    "test:watch": "vitest",
     "vite": "vite"
   },
   "lint-staged": {
