--- a/packages/components/blockquote-dialog/package.json
+++ b/packages/components/blockquote-dialog/package.json
@@ -54,8 +54,8 @@
     "sass:watch": "sass-style-template",
     "sort:package": "npx sort-package-json",
     "start": "concurrently -k -r \"npm:sass:watch\" \"npm:vite\"",
-    "test": "wtr",
-    "test:watch": "wtr --watch",
+    "test": "vitest --run --browser.headless",
+    "test:watch": "vitest",
     "vite": "vite"
   },
   "lint-staged": {
