--- a/package.json
+++ b/package.json
@@ -44,6 +44,24 @@
     "test:scope": "func() { lerna run test --stream --concurrency 1 --scope @blockquote-web-components/${1}; }; func",
     "version": "npm run standard"
   },
+  "commit-and-tag-version": {
+    "releaseCommitMessageFormat": "chore: release {{currentTag}}",
+    "commitUrlFormat": "{{host}}/oscarmarina/blockquote-web-components/commit/{{hash}}",
+    "compareUrlFormat": "{{host}}/oscarmarina/blockquote-web-components/compare/{{previousTag}}...{{currentTag}}"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional",
+      "@commitlint/config-lerna-scopes"
+    ],
+    "rules": {
+      "header-max-length": [
+        2,
+        "always",
+        100
+      ]
+    }
+  },
   "lint-staged": {
     "**/*.{js,ts,html}, !site/**/*": [
       "npm run format:eslint -- *"
@@ -66,9 +84,9 @@
     "@babel/eslint-plugin": "^7.25.9",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@commitlint/config-lerna-scopes": "^19.5.0",
-    "@html-eslint/eslint-plugin": "^0.31.1",
-    "@html-eslint/parser": "^0.31.0",
+    "@commitlint/config-lerna-scopes": "^19.7.0",
+    "@html-eslint/eslint-plugin": "^0.32.0",
+    "@html-eslint/parser": "^0.32.0",
     "commit-and-tag-version": "^12.5.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
@@ -79,7 +97,7 @@
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "lerna": "^8.1.9",
-    "lint-staged": "^15.2.11",
+    "lint-staged": "^15.3.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "sort-package-json": "^2.12.0",
@@ -87,9 +105,6 @@
     "stylelint-config-standard-scss": "^14.0.0",
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2"
-  },
-  "overrides": {
-    "lerna": "^8.1.9"
+    "typescript-eslint": "^8.19.0"
   }
 }
