--- a/packages/directives/blockquote-directive-svg-to-data-image/package.json
+++ b/packages/directives/blockquote-directive-svg-to-data-image/package.json
@@ -41,10 +41,6 @@
     "format:prettier": "prettier \"**/*.{js,ts,json,html}\" --write --ignore-path .prettierignore",
     "format:stylelint": "stylelint \"**/*.{scss,css}\" --fix --allow-empty-input --ignore-path .prettierignore",
     "postinstall": "npm run sort:package",
-    "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
-    "lint:eslint": "eslint .",
-    "lint:prettier": "prettier \"**/*.{js,ts,json,html}\" --check --ignore-path .prettierignore",
-    "lint:stylelint": "stylelint \"**/*.{scss,css}\" --allow-empty-input --ignore-path .prettierignore",
     "preview:vite": "vite preview",
     "sass:watch": "sass-style-template",
     "sort:package": "npx sort-package-json",
@@ -55,12 +51,13 @@
   },
   "lint-staged": {
     "**/*.{js,ts,html}": [
-      "npm run format:eslint"
+      "npm run format"
     ],
-    "**/*.{js,ts,json,html}": [
+    "**/*.json": [
       "npm run format:prettier"
     ],
     "**/*.{scss,css}": [
+      "npm run format:prettier",
       "npm run format:stylelint"
     ]
   },
@@ -75,20 +72,46 @@
       {
         "files": "*.{scss,css}",
         "options": {
-          "printWidth": 280,
           "singleQuote": false
+        }
+      },
+      {
+        "files": "*.json",
+        "options": {
+          "parser": "json-stringify"
         }
       }
     ]
   },
   "stylelint": {
     "extends": "stylelint-config-standard-scss",
+    "allowEmptyInput": true,
     "rules": {
       "custom-property-pattern": null,
       "no-duplicate-selectors": null,
       "color-function-notation": null,
-      "alpha-value-notation": null
-    }
+      "alpha-value-notation": null,
+      "media-feature-name-no-unknown": null,
+      "comment-empty-line-before": null,
+      "declaration-empty-line-before": null,
+      "property-no-vendor-prefix": null,
+      "selector-attribute-quotes": null,
+      "value-no-vendor-prefix": null
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/*.html"
+        ],
+        "customSyntax": "postcss-html"
+      },
+      {
+        "files": [
+          "**/*.{ts,js}"
+        ],
+        "customSyntax": "postcss-lit"
+      }
+    ]
   },
   "dependencies": {
     "lit": "^3.2.1"
