--- a/package.json
+++ b/package.json
@@ -23,27 +23,22 @@
     "clean": "rm package-lock.json && lerna clean",
     "clean:packages": "lerna exec -- rm -rf ./node_modules && npm run clean:packages:dev",
     "clean:packages:dev": "lerna exec -- rm -rf ./dev && lerna exec -- rm -rf ./package-lock.json",
-    "format": "func() { lerna run format:eslint && lerna run format:prettier && lerna run format:stylelint; }; func",
-    "format:eslint": "func() { eslint --fix \"./packages/**/${1:-*}/**/\"; }; func",
-    "format:package": "func() { sort-package-json \"./packages/**/${1:-*}/**/package.json\"; }; func",
-    "format:prettier": "func() { prettier --write --list-different --ignore-path .prettierignore \"./packages/**/${1:-*}/**/*.{js,ts,json,html}\"; }; func",
-    "format:stylelint": "func() { stylelint --fix --allow-empty-input --ignore-path .prettierignore \"./packages/**/${1:-*}/**/*.{css,scss}\"; }; func",
+    "eslint": "eslint --fix 'packages/**/*.*'",
+    "format": "lerna run format --stream --concurrency 1",
+    "lint": "npm run eslint && npm run prettier && npm run stylelint",
     "prepare": "husky",
+    "prettier": "prettier --write --ignore-path .prettierignore 'packages/**/*.{js,ts,css,scss,html,json}'",
     "push": "git push --follow-tags origin main",
     "release": " npm ci && npm run test:pre-push && lerna version --no-push",
     "site": "npm run site:prepare && npm run site:copy",
     "site:copy": "rm -rf ./site/**/* && node scripts/move-dev-directory.js",
     "site:prepare": "npm run clean:packages:dev && lerna run dev:vite",
     "standard": "commit-and-tag-version",
+    "stylelint": "stylelint -f verbose --ignore-path .prettierignore 'packages/**/*.{js,ts,css,scss,html}'",
     "test": "lerna run test --stream --concurrency 1",
     "test:pre-push": "npm run test -- --since",
     "test:scope": "func() { lerna run test --stream --concurrency 1 --scope @blockquote-web-components/${1}; }; func",
     "version": "npm run standard"
-  },
-  "commit-and-tag-version": {
-    "releaseCommitMessageFormat": "chore: release {{currentTag}}",
-    "commitUrlFormat": "{{host}}/oscarmarina/blockquote-web-components/commit/{{hash}}",
-    "compareUrlFormat": "{{host}}/oscarmarina/blockquote-web-components/compare/{{previousTag}}...{{currentTag}}"
   },
   "commitlint": {
     "extends": [
@@ -59,16 +54,68 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,ts,html}, !site/**/*": [
-      "npm run format:eslint -- *"
+    "**/*.{js,ts,html}": [
+      "npm run lint"
     ],
-    "**/*.{js,ts,json,html}, !site/**/*": [
-      "npm run format:prettier -- *"
+    "**/*.json": [
+      "npm run prettier"
     ],
     "**/*.{scss,css}": [
-      "npm run format:stylelint -- *"
-    ],
-    "**/package.json": "npm run format:package -- *"
+      "npm run prettier",
+      "npm run stylelint"
+    ]
+  },
+  "prettier": {
+    "bracketSameLine": true,
+    "bracketSpacing": false,
+    "htmlWhitespaceSensitivity": "ignore",
+    "printWidth": 100,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "overrides": [
+      {
+        "files": "*.{scss,css}",
+        "options": {
+          "singleQuote": false
+        }
+      },
+      {
+        "files": "*.json",
+        "options": {
+          "parser": "json-stringify"
+        }
+      }
+    ]
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard-scss",
+    "allowEmptyInput": true,
+    "rules": {
+      "custom-property-pattern": null,
+      "no-duplicate-selectors": null,
+      "color-function-notation": null,
+      "alpha-value-notation": null,
+      "media-feature-name-no-unknown": null,
+      "comment-empty-line-before": null,
+      "declaration-empty-line-before": null,
+      "property-no-vendor-prefix": null,
+      "selector-attribute-quotes": null,
+      "value-no-vendor-prefix": null
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/*.html"
+        ],
+        "customSyntax": "postcss-html"
+      },
+      {
+        "files": [
+          "**/*.{ts,js}"
+        ],
+        "customSyntax": "postcss-lit"
+      }
+    ]
   },
   "dependencies": {
     "cheerio": "^1.0.0",
@@ -102,5 +149,10 @@
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1"
+  },
+  "commit-and-tag-version": {
+    "releaseCommitMessageFormat": "chore: release {{currentTag}}",
+    "commitUrlFormat": "{{host}}/oscarmarina/blockquote-web-components/commit/{{hash}}",
+    "compareUrlFormat": "{{host}}/oscarmarina/blockquote-web-components/compare/{{previousTag}}...{{currentTag}}"
   }
 }
