--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "lerna run test --stream --concurrency 1",
     "test:pre-push": "npm run test -- --since",
     "test:scope": "func() { lerna run test --stream --concurrency 1 --scope @blockquote-web-components/${1}; }; func",
-    "version": "npm run standard"
+    "postversion": "npm run standard"
   },
   "commitlint": {
     "extends": [
@@ -132,23 +132,23 @@
     "@html-eslint/parser": "^0.35.0",
     "commit-and-tag-version": "^12.5.0",
     "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-lit": "^1.15.0",
     "eslint-plugin-lit-a11y": "^4.1.4",
     "eslint-plugin-wc": "^2.2.1",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "lerna": "^8.2.0",
+    "lerna": "^8.2.1",
     "lint-staged": "^15.4.3",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.2",
-    "sort-package-json": "^2.14.0",
-    "stylelint": "^16.14.1",
+    "prettier": "^3.5.3",
+    "sort-package-json": "^2.15.1",
+    "stylelint": "^16.15.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0"
   },
   "commit-and-tag-version": {
     "releaseCommitMessageFormat": "chore: release {{currentTag}}",
