--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,6 @@
 **/*.tgz
 **/*.tsbuildinfo
 **/storybook-static
+**/.cursor/rules/nx-rules.mdc
+**/.github/instructions/nx.instructions.md
 ## end gitignore
