--- a/packages/controllers/blockquote-controller-context-meta/package.json
+++ b/packages/controllers/blockquote-controller-context-meta/package.json
@@ -48,8 +48,8 @@
     "sass:watch": "sass-style-template",
     "sort:package": "npx sort-package-json",
     "start": "concurrently -k -r \"npm:vite\" \"npm:sass:watch\"",
-    "test": "vitest --run --browser.headless",
-    "test:watch": "vitest",
+    "test": "vitest",
+    "test:watch": "vitest --browser.headless=false",
     "vite": "vite"
   },
   "lint-staged": {
