--- a/packages/directives/blockquote-directive-ariaidref-slot/package.json
+++ b/packages/directives/blockquote-directive-ariaidref-slot/package.json
@@ -46,8 +46,8 @@
     "sass:watch": "sass-style-template",
     "sort:package": "npx sort-package-json",
     "start": "concurrently -k -r \"npm:sass:watch\" \"npm:vite\"",
-    "test": "vitest --run --browser.headless",
-    "test:watch": "vitest",
+    "test": "vitest",
+    "test:watch": "vitest --browser.headless=false",
     "vite": "vite"
   },
   "lint-staged": {
