--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,15 +17,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22.x'
+          registry-url: 'https://registry.npmjs.org'
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup npm
-        run: |
-          npm set "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}"
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Cache node modules
         uses: actions/cache@v4
         with:
@@ -50,3 +46,5 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           npx lerna version --yes
           npx lerna publish from-package --yes
+env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
