--- a/packages/components/blockquote-dialog/package.json
+++ b/packages/components/blockquote-dialog/package.json
@@ -120,6 +120,7 @@
   "dependencies": {
     "@blockquote-web-components/blockquote-directive-ariaidref-slot": "^1.3.14",
     "@blockquote/frontend-utilities": "^1.1.0",
+    "@lit-labs/observers": "^2.1.0",
     "lit": "^3.3.2"
   },
   "devDependencies": {
